<resources>
    <string name="app_name">Android-GiuaKi</string>
    <string name="DSGV">Danh sách giảng viên</string>
    <string name="txtSearch">Nhập thông tin tìm kiếm</string>
    <string name="maGV">Mã giáo viên</string>
    <string name="HoTenGV">Họ và Tên</string>
    <string name="HoTen">Họ và Tên</string>
    <string name="SDT">Số điện thoại</string>
    <string name="appName">Ứng dụng quản lý chấm bài</string>
    <string name="DSSV">Danh sách sinh viên</string>
    <string name="maSV">ID</string>
    <string name="MH">Mã Lớp</string>
    <string name="TenMH">Tên Lớp</string>
    <string name="DSMH">Danh sách Lớp học</string>
    <string name="maMH">Mã Lớp học</string>
    <string name="chiPhi">Chi Phí</string>
    <string name="tienDo">Tiến độ</string>
    <string name="dangXuat">Đăng xuất</string>
    <string name="thongTinCaNhan">Thông tin cá nhân</string>
    <string name="danhSachPhieu">Danh sách phiếu</string>
    <string name="phieuThanhToan">Phiếu Thanh toán</string>
    <string name="thongKeChiPhi">Thống kê chi phí</string>
    <string name="taoPhieuCham">Tạo Phiếu chấm</string>
    <string name="taoThongTinCham">Tạo thông tin chấm</string>
    <string name="taoDSPhieu">Danh Sách Phiếu</string>
    <string name="taoDSSV">Danh Sách Sinh Viên</string>
    <string name="tongCong">Tổng cộng:</string>
    <string name="tongTien">100,000,000</string>
    <string name="ThongTinKyTen">TP. Hồ Chí Minh, Ngày</string>
    <string name="TienTe">đ</string>
    <string name="Thang">Tháng</string>
    <string name="Nam">Năm</string>
    <string name="nguoiLapPhieu">Người lập phiếu</string>
    <string name="chuKy">Chữ Ký</string>
    <string name="maPhieu">SP</string>
    <string name="ngayGiao">Ngày Giao</string>
    <string name="soBai">Số Bài</string>
    <string name="tong">Tổng</string>
    <string name="q1">Quý 1</string>
    <string name="q2">Quý 2</string>
    <string name="q3">Quý 3</string>
    <string name="q4">Quý 4</string>
    <string name="tenTaiKhoan">Tên Tài Khoản</string>
    <string name="matKhau">Mật khẩu</string>
    <string name="nhapLaiMK">Nhập lại mật khẩu</string>
    <string name="Luu">Lưu</string>
    <string name="themPhieu">Thêm Phiếu Chấm</string>
    <string name="ngayGiaoBai">Ngày giao bài</string>
    <string name="giangVien">Giảng viên</string>
    <string name="soPhieu">Số phiếu</string>
    <string name="themThongTin">Thêm Thông Tin Phiếu</string>
    <string name="inPhieu">In Phiếu</string>
    <string name="title_activity_d_s_m_h">DSMHActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_thong_ke">ThongKeActivity</string>
</resources>
