<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTenMonHocTK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/TenMH"
            android:textAlignment="center"
            android:textSize="8dp" />

        <TextView
            android:id="@+id/txtQ1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/q1"
            android:textAlignment="center"
            android:textSize="8dp" />

        <TextView
            android:id="@+id/txtQ2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/q2"
            android:textAlignment="center"
            android:textSize="8dp" />

        <TextView
            android:id="@+id/txtQ3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/q3"
            android:textAlignment="center"
            android:textSize="8dp" />

        <TextView
            android:id="@+id/txtQ4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/q4"
            android:textAlignment="center"
            android:textSize="8dp" />

        <TextView
            android:id="@+id/txtChiPhiNam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/tong"
            android:textAlignment="center"
            android:textSize="8dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/TienTe"
            android:textAlignment="center"
            android:textSize="8dp" />
    </LinearLayout>

</LinearLayout>