<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/txtTenMHPhieu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/TenMH"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtSoBaiMH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/soBai"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtChiPhiMH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/chiPhi"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtTongChiPhiMH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/tong"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>