<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtTKChiPhi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/thongKeChiPhi"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:id="@+id/txtPhieuMaGV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nam"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txtPhieuDataMaGV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="2021"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:text="@string/TenMH"
                android:textAlignment="center"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:text="@string/q1"
                android:textAlignment="center"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:text="@string/q2"
                android:textAlignment="center"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:text="@string/q3"
                android:textAlignment="center"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:text="@string/q4"
                android:textAlignment="center"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:text="@string/tong"

                android:textAlignment="center"
                android:textSize="8dp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ListView
                android:id="@+id/listTK"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>