<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#1A237E"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:id="@+id/txtMaGV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="10dp"
            android:text="@string/maGV"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/txtHoTenGV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:padding="10dp"
            android:text="@string/HoTen"

            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtSdtGV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:padding="10dp"
            android:text="@string/SDT"
            android:textAlignment="textEnd" />


    </LinearLayout>
</LinearLayout>