<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPhieuThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/phieuThanhToan"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:id="@+id/txtPhieuMaGV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maGV"
                android:textAlignment="center"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/txtPhieuDataMaGV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="GV74"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:id="@+id/txtPhieuHoTenGV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HoTenGV"
                android:textAlignment="center"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/txtPhieuDataHoTenGV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Trần An Khoa"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:id="@+id/txtPhieuSdtGV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SDT"
                android:textAlignment="center"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/txtPhieuDataSdtGV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="0123456789"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

<!--            <ListView-->
<!--                android:id="@+id/listDSPhieu"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="280dp"-->
<!--                android:background="@drawable/rounded_corner"-->
<!--                android:paddingLeft="5dp"-->
<!--                android:paddingRight="5dp"-->
<!--                android:paddingBottom="10dp"/>-->
            <ExpandableListView
                android:id="@+id/expanded_menu"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
                android:dividerHeight="0.5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/tongCong"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#FF0031"/>
                    <TextView
                        android:id="@+id/txtTongThanhToan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginLeft="2dp"
                        android:text="@string/tongTien"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#FF0031"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:textAlignment="textEnd"
                        android:text="@string/TienTe"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#FF0031"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ThongTinKyTen"
                                android:textAlignment="center"
                                android:textSize="12sp" />
                            <TextView
                                android:id="@+id/txtNgayThanhToan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="09"
                                android:textAlignment="center"
                                android:textSize="12sp"
                                android:paddingLeft="5dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Thang"
                                android:textAlignment="center"
                                android:textSize="12sp"
                                android:paddingLeft="5dp"/>
                            <TextView
                                android:id="@+id/txtThangThanhToan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="04"
                                android:textAlignment="center"
                                android:textSize="12sp"
                                android:paddingLeft="5dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Nam"
                                android:textAlignment="center"
                                android:textSize="12sp"
                                android:paddingLeft="5dp"/>
                            <TextView
                                android:id="@+id/txtNamThanhToan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1999"
                                android:textAlignment="center"
                                android:textSize="12sp"
                                android:paddingLeft="5dp"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nguoiLapPhieu"
                            android:textAlignment="center"
                            android:textSize="12sp"/>
                        <TextView
                            android:id="@+id/txtChuKy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:paddingVertical="15dp"
                            android:textColor="@color/teal_700"/>
                        <TextView
                            android:id="@+id/txtTenNguoiThanhToan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/HoTen"
                            android:textAlignment="center"
                            android:textSize="12dp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>