<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#1A237E"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        >

        <TextView
            android:id="@+id/txtMaMH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/MH"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/txtTenMH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/TenMH"

            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtChiPhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:text="@string/chiPhi"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/txtPC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="/" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:foregroundTint="#FFFFFF"
            android:scaleType="center"
            android:src="@android:drawable/ic_delete"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>