<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDSGV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/DSGV"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <ImageButton
                    android:id="@+id/imgbtn_addgv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="#FFFFFF"
                    android:backgroundTint="#FFFFFF"
                    android:foregroundTint="#FFFFFF"
                    android:scaleType="fitEnd"
                    android:src="@android:drawable/ic_input_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/listGV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtMaGV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="10dp"
                    android:text="@string/maGV"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtHoTenGV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:padding="10dp"
                    android:text="@string/HoTen"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txtSdtGV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:padding="10dp"
                    android:text="@string/SDT"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <ListView
                android:id="@+id/lvDSGV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>